Masde the following changes: Added 2 alerts 	Missing Pyridoxine 	Missed TB Screening at last Appointment though not in tb program 	Not on IPT and not on TB treatment Added 1 report 	TB Patients Diary Added TB regimens Made some slight modifications to the tb html forms 	other medications 	tb discontinuation 	tb followup 	GeneXpert

--- a/omod/src/main/webapp/resources/htmlforms/otherMedications.html
+++ b/omod/src/main/webapp/resources/htmlforms/otherMedications.html
@@ -67,6 +67,35 @@
 				<render />
 			</repeat>
 		</table>
+		<table>
+			<tr>
+				<th colspan="2">Nutirional Support</th>
+			</tr>
+			<tr>
+				<td>Therapeutic feeds</td>
+				<td>
+					<obs conceptId="5484AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptId="161650AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="" style="checkbox" labelText="" />
+				</td>
+			</tr>
+			<tr>
+				<td>Vitamin A</td>
+				<td>
+					<obs conceptId="5484AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptId="103659AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="" style="checkbox" labelText="" />					
+				</td>
+			</tr>
+			<tr>
+				<td>Pyridoxine</td>
+				<td>
+					<obs conceptId="5484AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptId="82913AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="" style="checkbox" labelText="" />					
+				</td>
+			</tr>
+			<tr>
+				<td>Supplementary foods</td>
+				<td>
+					<obs conceptId="5484AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptId="161542AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="" style="checkbox" labelText="" />					
+				</td>
+			</tr>
+		</table>
 	</div>
 
 	<div class="ke-form-footer">
