--- a/omod/src/main/webapp/resources/htmlforms/tb/tbEnrollment.html
+++ b/omod/src/main/webapp/resources/htmlforms/tb/tbEnrollment.html
@@ -230,8 +230,29 @@
 								<td>
 									<div id="referredByOptions">
 										<obs conceptId="160540AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-											answerConceptIds="160539AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160631AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160546AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,161359AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160538AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1725AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1744AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160551AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1555AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-											answerLabels="VCT center,HIV care clinic,STI Clinic,Home Based Care,Antenatal/PMTCT Clinic,Private Sector,Chemist/pharmacist,Self referral,Community Health worker(CHW)" style="radio"  answerSeparator="&lt;br /&gt;" />
+											answerConceptIds="160539AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,
+															160631AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,
+															160546AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,
+															161359AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,
+															160538AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,
+															1725AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,
+															1744AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,
+															160551AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,
+															1555AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,
+															162050AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,
+															164103AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+											answerLabels="VCT center,
+														HIV care clinic,
+														STI Clinic,
+														Home Based Care,
+														Antenatal/PMTCT Clinic,
+														Private Sector,
+														Chemist/pharmacist,
+														Self referral,
+														Community Health worker(CHW),
+														CCC,
+														Diabetes Clinic" 
+											style="radio"  answerSeparator="&lt;br /&gt;" />
 									</div>
 								</td>
 							</tr>
@@ -383,8 +404,23 @@
 							<table class="tb1" border="0" width="100%">
 								<tr>
 									<td>
-										<obs conceptId="159871AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptIds="159878AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159877AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159876AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159874AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159873AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159872AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="radio"
-										answerLabels="New,Smear positive Relapse,Smear negative Relapse,Failure,Treatment resumed after defaulting,Transfer in" id="patientClassification" answerSeparator="&lt;br /&gt;&lt;br /&gt;" />
+										<obs 
+										conceptId="159871AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" 
+										answerConceptIds="159878AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,
+														159877AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,
+														159876AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,
+														159874AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,
+														159873AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,
+														159872AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,
+														163609AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+										answerLabels="New,
+													Smear positive Relapse,
+													Smear negative Relapse,
+													Treatment after Failure,
+													Treatment resumed after defaulting,
+													Transfer in,
+													Previous treatment history unknown" 
+										 style="radio" id="patientClassification" answerSeparator="&lt;br /&gt;&lt;br /&gt;" />
 									</td>
 								</tr>
 								<tr><td></td></tr>
