--- a/omod/src/main/webapp/resources/htmlforms/tb/tbDiscontinuation.html
+++ b/omod/src/main/webapp/resources/htmlforms/tb/tbDiscontinuation.html
@@ -83,8 +83,28 @@
 						<table  border="0" cellspacing="5" align="center">
 							<tr>
 								<td>Treatment Outcome</td>
-								<td><obs conceptId="159786AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"  style="dropdown" id="treatment_outcome"  answerConceptIds="159791AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160035AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159874AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160034AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160031AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159492AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Cured(Smear. Negative),Treatment Completed(no smear result),Failure(Smear. Positive),Dead,Defaulted,Transferred Out"/></td>
-
+								<td>
+									<obs 
+										conceptId="159786AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"  style="dropdown" id="treatment_outcome"  
+										answerConceptIds="159791AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,
+														160035AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,
+														159874AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,
+														160034AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,
+														160031AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,
+														5240AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,
+														160737AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,
+														159976AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,
+														159492AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" 
+										answerLabels="Cured(Smear. Negative),
+														Treatment Completed(no smear result),
+														Failure(Smear. Positive),
+														Dead,
+														Defaulted,
+														Lost to followup,
+														Not evaluated,
+														Moved to category 4 classification,
+														Transferred Out"/>
+								</td>
 								<td id ="id_treatment_outcome_date_ttle">Treatment Outcome date</td>
 								<td id ="id_treatment_outcome_date_value"><obs conceptId="159787AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="treatmentoutcomedate"/></td>
 
