--- a/omod/src/main/webapp/resources/htmlforms/tb/tbFollowUpVisit.html
+++ b/omod/src/main/webapp/resources/htmlforms/tb/tbFollowUpVisit.html
@@ -216,6 +216,20 @@
 			<tr>
 				<td colspan="2">
 					<fieldset>
+						<table>
+							<tr>
+								<td>Nutritional counselling (NC) Done</td>
+								<td>
+									<obs conceptId="1380AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="YES,NO" style="dropdown" labelText="" />					
+								</td>								
+							</tr>
+						</table>
+					</fieldset>
+				</td>
+			</tr>
+			<tr>
+				<td colspan="2">
+					<fieldset>
 					  <table cellpadding="5">
 						  <tr>
 							  <td>Hiv Status</td>
