Add Regex to UPN and Restrict them from having alphabetical letters and empty spaces Add Calculation to Identify which program a patient belongs to Update lab results form to have provision for ordering testing Add an additional column on the missed appointments list to reflect the program under which the client is enrolled Open the system to allow differentiated model of care where long time appointments are acceptable A way to identify patients whose specimen has been taken for VL is needed and isolate them from the list of those due for viral load

--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivClinicalEncounterAddendum.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivClinicalEncounterAddendum.html
@@ -28,9 +28,13 @@
 				var encounterDate = new Date(getValue('encounter-date.value')).getTime();
 				var encouterDateValue = new Date(getValue('encounter-date.value'));
 				var fourMonthsFromEncounterDate = encouterDateValue.setDate(encouterDateValue.getDate() + 120);
-				if ((returnDate &lt; encounterDate) || (returnDate &gt; fourMonthsFromEncounterDate)) {
-					getField('returnVisitDate.error').html('Return Visit date should be after encounter date and NOT more than four months from Encounter Date').show();
+				if (returnDate &lt; encounterDate)  {
+					getField('returnVisitDate.error').html('Return Visit date should be after encounter date').show();
 					return false;
+				}
+
+				if (returnDate &gt; fourMonthsFromEncounterDate) {
+					alert('Return Visit date is more than four months from Encounter Date');
 				}
 				return true;
 			});
