--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivEnrollment.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivEnrollment.html
@@ -89,6 +89,11 @@
 					return false;
 				}*/
 
+				if(/^[0-9]{5}-[0-9]{5}$/.test(upn) === false) {
+					alert("Invalid Unique Patien Number(UPN) Format! Should be mfl-clinic number, each 5 digits");
+					return false;
+				}
+
 				if (encounterDate &lt; birthDate) {
 					getField('encounter-date.error').html('Encounter date, should not be earlier than birth date').show();
 					return false;
@@ -155,7 +160,7 @@
 					<tr>
 						<td>Unique Patient Number (UPN)</td>
 						<td>
-							<span id="hiv-id"><patient field="identifier" identifierTypeId="05ee9cf4-7242-4a17-b4d4-00f707265c8a" /></span>
+							<span id="hiv-id"><patient id="upn" field="identifier" identifierTypeId="05ee9cf4-7242-4a17-b4d4-00f707265c8a" /></span>
 							<input type="button" id="generate-hiv-id" value="Generate"/>
 						</td>
 					</tr>
