--- a/omod/src/main/webapp/resources/htmlforms/mchcs/mchcsFollowupVisit.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchcs/mchcsFollowupVisit.html
@@ -159,8 +159,7 @@
 								<tr>
 									<td rowspan="2">Visit<br />Date</td>
 									<td rowspan="2">Age <br/>(Wks/Mths)</td>
-									<td rowspan="2">Weight <br/>(Kgs)</td>
-									<td rowspan="2">Height <br/>(Cms)</td>
+									<td rowspan="2">MUAC</td>
 									<td rowspan="2">Infant <br/> Feeding</td>
 									<td colspan="3">Medication Given<br /> <i>If HIV Exposed</i></td>
 									<td rowspan="2">TB <br />Assessment <br/> Outcome</td>
@@ -183,22 +182,25 @@
 									<td>(g)</td>
 									<td>(h)</td>
 									<td>(i)</td>
-									<td>(j)</td>
 								</tr>
 
 								<tr>
-									<td><encounterDate id="encounter-date" showTime="true" /></td>
+									<td><encounterDate id="encounter-date" showTime="true" /><br />
+									Revisit this year? <obs conceptId="164142AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="radio" answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Yes,No" answerSeparator="&lt;br/&gt;" />									</td>
 									<td><div id="age" class="value"></div></td>
-									<td><obs conceptId="5089AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" size="2" /></td>
-									<td><obs conceptId="5090AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" size="3" /></td>
-									<td><obs conceptId="1151AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="radio" answerConceptIds="5526AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1595AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,6046AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Exclusive Breastfeeding(EBF),Exclusive Replacement(ERF),Mixed Feeding(MF)" answerSeparator="&lt;br/&gt;" /></td>
+									<td>  <obs conceptId="160908AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="radio" answerConceptIds="160909AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160910AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,127778AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Green,Yellow,Red" answerSeparator="&lt;br/&gt;" /></td>
+									<td><obs conceptId="1151AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="radio" answerConceptIds="5526AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1595AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,6046AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Exclusive Breastfeeding(EBF),Exclusive Replacement(ERF),Mixed Feeding(MF)" answerSeparator="&lt;br/&gt;" /><br />
+									Exclusive breastfeeding 0-6 Months <obs conceptId="5526AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Yes,No" style="radio"/><br />
+									Stunted? <obs conceptId="164088AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptIds="164085AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1115AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Yes,No" style="radio"/>									</td>
 									<td><obs conceptId="966AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptId="80586AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="" style="checkbox" /></td>
 									<td><obs conceptId="1109AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptId="105281AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="" style="checkbox" /></td>
 									<td><obs conceptId="1193AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptId="461AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="" style="checkbox" /></td>
 									<td><obs conceptId="1659AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="radio" answerConceptIds="1660AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,142177AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1661AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1662AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1679AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160737AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="No signs,Suspect,Confirmed,TB Rx,INH,Not done" answerSeparator="&lt;br/&gt;" /></td>
-									<td><obs conceptId="5096AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" allowFutureDates="true" /></td>
+									<td><obs conceptId="5096AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" allowFutureDates="true" /><br />
+									Referral from: <obs conceptId="160481AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="radio" answerConceptIds="1537AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160543AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Other Health facility,Community Unit" answerSeparator="&lt;br/&gt;" /><br />
+									Referral to: <obs conceptId="163145AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="radio" answerConceptIds="1537AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160543AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Other Health facility,Community Unit" answerSeparator="&lt;br/&gt;" />
+									</td>
 								</tr>
-
 							</tbody>
 						</table>
 					</td>
@@ -212,6 +214,8 @@
 							<tr>
 								<th colspan="2">Development Milestones by Age</th>
 								<th>Achieving Milestones?</th>
+							    <th>Weight Category </th>
+							    <th>Type of followup </th>
 							</tr>
 							<tr>
 								<td colspan="2">
@@ -220,16 +224,16 @@
 										<obs conceptId="162069AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="checkbox" answerConceptId="162057AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="Head Holding/Control" /><br />
 										<obs conceptId="162069AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="checkbox" answerConceptId="162058AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="Turns towards the origin of sound" /><br />
 										<obs conceptId="162069AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="checkbox" answerConceptId="162059AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="Extends hand to grasp a toy" /> <br />
-
 									</div>
 									<div style="float: left">
 										<obs conceptId="162069AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="checkbox" answerConceptId="162061AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="Sitting" /> <br />
 										<obs conceptId="162069AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="checkbox" answerConceptId="162062AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="Standing" /><br />
 										<obs conceptId="162069AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="checkbox" answerConceptId="162063AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="Walking" /> <br />
 										<obs conceptId="162069AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="checkbox" answerConceptId="162060AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="Talking" /> <br />
-									</div>
-								</td>
+									</div>								</td>
 								<td><obs conceptId="1189AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="radio" answerConceptIds="1115AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,6022AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,6025AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Normal(N),Delayed(D),Regressed(R)" answerSeparator="&lt;br/&gt;"/></td>
+							    <td><obs conceptId="1854AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="radio" answerConceptIds="123814AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,126598AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,114413AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,115115AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1115AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Underweight(UW),Severely Underweight(SUW),Overweight(OW),Obese(O),Normal(N)" answerSeparator="&lt;br/&gt;"/></td>
+							    <td><obs conceptId="159402AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="radio" answerConceptIds="132636AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,116474AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,115122AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,5622AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Marasmus,Kwashiorkor,Mulnutrition,Other" answerSeparator="&lt;br/&gt;"/></td>
 							</tr>
 						</table>
 
@@ -326,15 +330,13 @@
 						<div style="float: left">
 							<table class="hei">
 								<tr>
-									<th colspan="2">DEWORMING</th>
+									<th colspan="2">DEWORMING and VITAMIN A SUPP. </th>
 									<th rowspan="2"></th>
 									<th></th>
-
 								</tr>
 								<tr>
 									<td colspan="2">
-										<p>Give once every six months to all children one year and <br />above: If Mebendazole 500mg or Albendazole 200mg<br />for children 1 to 2 years and 400mg for children 2 years<br />and above</p>
-									</td>
+										<p>Give once every six months to all children one year and <br />above: If Mebendazole 500mg or Albendazole 200mg<br />for children 1 to 2 years and 400mg for children 2 years<br />and above</p>									</td>
 									<th rowspan="2">Date of Next Visit</th>
 								</tr>
 								<tr>
@@ -345,20 +347,49 @@
 								<obsgroup groupingConceptId="1442AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA">
 									<tr>
 										<td id="calculated-age-deworming" class="value"></td>
-										<td><obs conceptId="1282AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptIds="79413AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,70439AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Mebendazole,Albendazole" style="radio" /></td>
+										<td><obs conceptId="1282AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptIds="79413AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,70439AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Mebendazole,Albendazole" style="radio" />										</td>
 										<td><obs conceptId="1443AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /><obs conceptId="1621AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
 										<td><obs conceptId="5096AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" allowFutureDates="true" /></td>
 									</tr>
 								</obsgroup>
+									<tr>
+										<td></td>
+										<td>Vitamin A<obs conceptId="161534AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Yes,No" style="radio" /></td>
+										<td></td>
+										<td></td>
+									</tr>
+									<tr>
+									  <td colspan="4">Any disability? <obs conceptId="162558AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Yes,No" style="radio" /></td>
+							  </tr>
 							</table>
 						</div>
 					</td>
 				</tr>
 				<tr>
-					<td colspan="3" style="background-color: #696969; color: #ffffff;text-align:center;">Clinician's Notes</td>
+					<td>
+						<table border="0" cellspacing="0" cellpadding="0" class="hei">
+						  <tr>
+							<th>Clinician's Notes</th>
+							<th></th>
+							<th>Physical features</th>
+						  </tr>
+						  <tr>
+							<td><obs conceptId="159395AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" cols="40" rows="10"/></td>
+							<td>
+								Counseled On? <obs conceptId="1379AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="radio" answerConceptIds="1914AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1380AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="HIV,Nutrition" answerSeparator="&lt;br/&gt;" /><br />
+								Supplemented with MNPS 6-23 Months? <obs conceptId="5484AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="radio" answerConceptIds="161649AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1107AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Yes,No" answerSeparator="&lt;br/&gt;" />
+							</td>
+							<td>
+							<div style="color:#ffffff;background-color:#696969">Colouration...,Ears...,Mouth..., Chest...,Heart...,Abdomen..., Umblical Cord..,Spine.., Arms &amp; feet...,Genitlia..., Anus...,Congenital abnomalities... </div>
+							<obs conceptId="1391AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" cols="40" rows="10"/></td>
+						  </tr>
+						</table>
+
+					</td>
+					
 				</tr>
 				<tr>
-					<td><obs conceptId="159395AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" cols="80" rows="10"/></td>
+					<td></td>
 				</tr>
 			</tbody>
 		</table>
