--- a/omod/src/main/webapp/resources/htmlforms/tb/tbGeneXpert.html
+++ b/omod/src/main/webapp/resources/htmlforms/tb/tbGeneXpert.html
@@ -110,9 +110,8 @@
 					            				<th>1. TB Diagnosis</th>
 					            			</tr>
 					            			<tr>
-					            				<td>
-					            					<obs 
-					            					conceptId="b473fd0d-0689-43c2-8465-e17c5e02d999" 
+					            				<td><obs 
+					            					conceptId="162276AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" 
 					            					answerConceptId="138571AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" 
 					            					answerLabel="HIV positive with symptoms of TB" 
 					            					style="checkbox" labelText=""/>
@@ -121,7 +120,7 @@
 											<tr>
 												<td>
 					            					<obs 
-					            					conceptId="b473fd0d-0689-43c2-8465-e17c5e02d999" 
+					            					conceptId="162276AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" 
 					            					answerConceptId="164095AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" 
 					            					answerLabel="Children &lt;15 yrs with TB symptoms" 
 					            					style="checkbox" labelText=""/>
@@ -130,7 +129,7 @@
 					            			<tr>
 					            				<td>
 					            					<obs 
-					            					conceptId="b473fd0d-0689-43c2-8465-e17c5e02d999" 
+					            					conceptId="162276AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" 
 					            					answerConceptId="164096AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" 
 					            					answerLabel="All smear negative PTB cases (who are clinically and x-ray suggestive)" 
 					            					style="checkbox" labelText=""/>
@@ -146,7 +145,7 @@
 					            			<tr>
 					            				<td>
 					            					<obs 
-					            					conceptId="b473fd0d-0689-43c2-8465-e17c5e02d999" 
+					            					conceptId="162276AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" 
 					            					answerConceptId="160032AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" 
 					            					answerLabel="Failure first line treatment (Failure CAT 1)" 
 					            					style="checkbox" labelText=""/>
@@ -155,7 +154,7 @@
 											<tr>		            				
 												<td>
 					            					<obs 
-					            					conceptId="b473fd0d-0689-43c2-8465-e17c5e02d999" 
+					            					conceptId="162276AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" 
 					            					answerConceptId="164097AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" 
 					            					answerLabel="Return after loss to follow up" 
 					            					style="checkbox" labelText=""/>
@@ -164,7 +163,7 @@
 											<tr>		            				
 												<td>
 					            					<obs 
-					            					conceptId="b473fd0d-0689-43c2-8465-e17c5e02d999" 
+					            					conceptId="162276AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" 
 					            					answerConceptId="160030AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" 
 					            					answerLabel="Failure re-treatment (Failure CAT 2)" 
 					            					style="checkbox" labelText=""/>
@@ -173,7 +172,7 @@
 											<tr>
 												<td>
 					            					<obs 
-					            					conceptId="b473fd0d-0689-43c2-8465-e17c5e02d999" 
+					            					conceptId="162276AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" 
 					            					answerConceptId="160033AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" 
 					            					answerLabel="Relapse" 
 					            					style="checkbox" labelText=""/>
@@ -182,7 +181,7 @@
 					            			<tr>
 					            				<td>
 					            					<obs 
-					            					conceptId="b473fd0d-0689-43c2-8465-e17c5e02d999" 
+					            					conceptId="162276AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" 
 					            					answerConceptId="164098AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" 
 					            					answerLabel="DR TB contacts" 
 					            					style="checkbox" labelText=""/>
@@ -191,7 +190,7 @@
 					            			<tr>
 					            				<td>
 					            					<obs 
-					            					conceptId="b473fd0d-0689-43c2-8465-e17c5e02d999" 
+					            					conceptId="162276AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" 
 					            					answerConceptId="5619AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" 
 					            					answerLabel="Healthcare workers with TB symptoms" 
 					            					style="checkbox" labelText=""/>
@@ -200,7 +199,7 @@
 					            			<tr>
 					            				<td>
 					            					<obs 
-					            					conceptId="b473fd0d-0689-43c2-8465-e17c5e02d999" 
+					            					conceptId="162276AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" 
 					            					answerConceptId="164099AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" 
 					            					answerLabel="Patients who develop TB on IPT" 
 					            					style="checkbox" labelText=""/>
@@ -209,7 +208,7 @@
 				            				<tr>
 				            					<td>
 					            					<obs 
-					            					conceptId="b473fd0d-0689-43c2-8465-e17c5e02d999" 
+					            					conceptId="162276AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" 
 					            					answerConceptId="164100AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" 
 					            					answerLabel="Refugees with symptoms of TB" 
 					            					style="checkbox" labelText=""/>
@@ -218,7 +217,7 @@
 				            				<tr>
 				            					<td>
 					            					<obs 
-					            					conceptId="b473fd0d-0689-43c2-8465-e17c5e02d999" 
+					            					conceptId="162276AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" 
 					            					answerConceptId="164101AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" 
 					            					answerLabel="Smear positive at 2 months" 
 					            					style="checkbox" labelText=""/>
@@ -227,7 +226,7 @@
 				            				<tr>
 				            					<td>
 					            					<obs 
-					            					conceptId="b473fd0d-0689-43c2-8465-e17c5e02d999" 
+					            					conceptId="162276AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" 
 					            					answerConceptId="162277AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" 
 					            					answerLabel="Prisoners with TB symptoms" 
 					            					style="checkbox" labelText=""/>
